--- a/app/system/modules/finder/app/templates/table.html
+++ b/app/system/modules/finder/app/templates/table.html
@@ -7,17 +7,17 @@
     </thead>
     <tbody>
 
-        <tr v-repeat="folders | searched" class="uk-visible-hover" :class="{'uk-active': isSelected(name)}" v-on="click: toggleSelect">
+        <tr v-repeat="folders | searched" class="uk-visible-hover" :class="{'uk-active': isSelected(name)}" @click.prevent="toggleSelect">
             <td><input type="checkbox" name="name" value="{{ name }}" v-checkbox="selected"></td>
             <td class="pk-table-width-minimum">
                 <i class="pk-icon-folder-circle"></i>
             </td>
-            <td class="pk-table-text-break pk-table-min-width-200"><a v-on="click: setPath(path)">{{ name }}</a></td>
+            <td class="pk-table-text-break pk-table-min-width-200"><a @click="setPath(path)">{{ name }}</a></td>
             <td></td>
             <td></td>
         </tr>
 
-        <tr v-repeat="files | searched" class="uk-visible-hover" :class="{'uk-active': isSelected(name)}" v-on="click: toggleSelect">
+        <tr v-repeat="files | searched" class="uk-visible-hover" :class="{'uk-active': isSelected(name)}" @click.prevent="toggleSelect">
             <td><input type="checkbox" name="name" value="{{ name }}" v-checkbox="selected"></td>
             <td class="pk-table-width-minimum">
                 <i v-if="isImage(url)" class="pk-icon-contain" v-lazy-background="$url(url)"></i>
