--- a/app/system/modules/site/app/templates/settings.html
+++ b/app/system/modules/site/app/templates/settings.html
@@ -26,7 +26,7 @@
 <div class="uk-form-row">
     <span class="uk-form-label">{{ 'Restrict Access' | trans }}</span>
     <div class="uk-form-controls uk-form-controls-text">
-        <p v-repeat="role: roles" class="uk-form-controls-condensed">
+        <p v-for="role in roles" class="uk-form-controls-condensed">
             <label><input type="checkbox" :value="role.id" v-checkbox="node.roles" number> {{ role.name }}</label>
         </p>
     </div>
