--- a/app/system/modules/widget/app/templates/widget-settings.html
+++ b/app/system/modules/widget/app/templates/widget-settings.html
@@ -20,7 +20,7 @@
     <div class="uk-form-row">
         <span class="uk-form-label">{{ 'Restrict Access' | trans }}</span>
         <div class="uk-form-controls uk-form-controls-text">
-            <p v-repeat="role: config.roles" class="uk-form-controls-condensed">
+            <p v-for="role in config.roles" class="uk-form-controls-condensed">
                 <label><input type="checkbox" :value="role.id" v-checkbox="widget.roles" number> {{ role.name }}</label>
             </p>
         </div>
