--- a/app/system/modules/finder/app/templates/table.html
+++ b/app/system/modules/finder/app/templates/table.html
@@ -1,6 +1,6 @@
 <table class="uk-table uk-table-hover uk-table-middle">
     <thead>
-        <th class="pk-table-width-minimum"><input type="checkbox" v-check-all="selected: input[name=name]"></th>
+        <th class="pk-table-width-minimum"><input type="checkbox" v-check-all:selected.literal="input[name=name]"></th>
         <th colspan="2">{{ 'Name' | trans }}</th>
         <th class="pk-table-width-minimum uk-text-center">{{ 'Size' | trans }}</th>
         <th class="pk-table-width-minimum">{{ 'Modified' | trans }}</th>
