--- a/app/system/modules/theme/less/uikit/uikit.less
+++ b/app/system/modules/theme/less/uikit/uikit.less
@@ -50,6 +50,7 @@
 // Navs
 @import "nav.less";
 @import "navbar.less";
+@import "sidebar.less";
 @import "subnav.less";
 @import "breadcrumb.less";
 @import "pagination.less";
