Adjusted sidebar BG color and fixed margins on title in header

--- a/app/system/modules/theme/less/uikit/sidebar.less
+++ b/app/system/modules/theme/less/uikit/sidebar.less
@@ -7,4 +7,4 @@
 // Variables
 // ========================================================================
 
-@sidebar-background:             #326496;
+@sidebar-background:             #28415A;
