--- a/app/system/modules/theme/less/uikit/sidebar.less
+++ b/app/system/modules/theme/less/uikit/sidebar.less
@@ -7,4 +7,7 @@
 // Variables
 // ========================================================================
 
-@sidebar-background:             #28415A;
+@sidebar-full-width:            200px;
+@sidebar-compact-width:         42px;
+@sidebar-background:            #28415A;
+@sidebar-hover-background:      darken(@navbar-background, 20%);
