--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -23,6 +23,7 @@ body {
     display: flex;
     width: 100%;
     height: 100%;
+    justify-content: center;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -39,10 +40,29 @@ body {
 
 .tm-sidebar {
     position: fixed;
+    display: flex;
     width: @sidebar-full-width;
     height: 100%;
+    flex-direction: column;
     background: @sidebar-background;
     color: @global-contrast-color;
+    -webkit-font-smoothing: subpixel-antialiased;
+    -moz-osx-font-smoothing: auto;
+}
+
+.tm-sidebar-menu-container {
+    padding-bottom: 12px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+.tm-sidebar-header {
+    margin: 16px 14px 6px 14px;
+    font-size: 10px;
+    text-transform: uppercase;
+    color: @global-contrast-color;
+    opacity: 0.3;
+    cursor: default;
 }
 
 .tm-sidebar ul li {
@@ -54,8 +74,6 @@ body {
     display: flex;
     padding: 12px 16px 14px 16px;
     align-items: center;
-    -webkit-font-smoothing: subpixel-antialiased;
-    -moz-osx-font-smoothing: auto;
 }
 
 .tm-sidebar ul li a img {
