Added sidebar full/compact toggle + adjusted main navbar pager color

--- a/app/system/modules/theme/less/uikit/navbar.less
+++ b/app/system/modules/theme/less/uikit/navbar.less
@@ -77,7 +77,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        border-bottom: 2px solid #f0f657;
+        border-bottom: 3px solid #ebbe19;
     }
 
     /*
