--- a/app/system/modules/theme/less/theme.less
+++ b/app/system/modules/theme/less/theme.less
@@ -51,13 +51,14 @@ body {
 }
 
 .tm-sidebar-menu-container {
+    flex: 1;
     padding-bottom: 12px;
     overflow-x: hidden;
     overflow-y: scroll;
 }
 
 .tm-sidebar-header {
-    margin: 16px 14px 6px 14px;
+    margin: 28px 14px 6px 14px;
     font-size: 10px;
     text-transform: uppercase;
     color: @global-contrast-color;
@@ -88,12 +89,138 @@ body {
     opacity: 0.6;
 }
 
+.tm-sidebar ul li.active a,
 .tm-sidebar ul li a:hover {
     background: @sidebar-hover-background;
 }
 
+.tm-sidebar ul li.active a p,
 .tm-sidebar ul li a:hover p {
     opacity: 1.0;
+}
+
+.tm-sidebar-mode-button {
+    height: auto;
+    padding: 8px 0px 10px 0px;
+    text-align: center;
+    font-size: 10px;
+    text-transform: uppercase;
+    color: @global-contrast-color;
+    border-top: solid 1px rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.1);
+    transition: background 0.2s;
+    cursor: pointer;
+}
+
+.tm-sidebar-mode-button .tm-sidebar-mode-button-icon {
+    display: inline-block;
+    position: relative;
+    width: 14px;
+    height: 14px;
+    top: 3px;
+    left: 0px;
+    margin-left: -22px;
+    background-size: 14px;
+    background-image: url("../../../assets/images/icon-arrow-back.svg");
+    opacity: 0.3;
+    transition: opacity 0.2s, left 0.4s;
+}
+
+.tm-sidebar-mode-button p {
+    display: inline-block;
+    position: relative;
+    margin: 0;
+    opacity: 0.3;
+    transition: opacity 0.2s;
+}
+
+.tm-sidebar-mode-button:hover {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.tm-sidebar-mode-button:hover .tm-sidebar-mode-button-icon {
+    opacity: 0.6;
+    left: -8px;
+}
+
+.tm-sidebar-mode-button:hover p {
+    opacity: 0.6;
+}
+
+/* Sidebar (compact mode)
+ ========================================================================== */
+
+body.compact .tm-content {
+    margin-left: @sidebar-compact-width;
+}
+
+body.compact .tm-sidebar {
+    width: @sidebar-compact-width;
+    z-index: 1;
+}
+
+body.compact .tm-sidebar .tm-sidebar-header {
+    margin: 0;
+    opacity: 0;
+}
+
+body.compact .tm-sidebar ul li a {
+    display: flex;
+    position: relative;
+    padding: 12px 16px 14px 16px;
+    text-align: center;
+    align-items: center;
+}
+
+body.compact .tm-sidebar ul li a img {
+    width: 32px;
+}
+
+body.compact .tm-sidebar ul li a p {
+    position: fixed;
+    margin-left: 26px;
+    margin-top: 3px;
+    padding: 4px 10px 5px 10px;
+    font-size: 13px;
+    color: @global-contrast-color;
+    background: darken(desaturate(@sidebar-background, 10%), 5%);
+    border-radius: 4px;
+    opacity: 0.0;
+    transition: margin-left 0.25s;
+}
+
+body.compact .tm-sidebar ul li a p:before {
+    content: "";
+    position: fixed;
+    width: 0;
+    height: 0;
+    margin-left: -15px;
+    margin-top: 5px;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-right: 6px solid darken(desaturate(@sidebar-background, 10%), 5%);
+}
+
+body.compact .tm-sidebar ul li a:hover p {
+    opacity: 1.0;
+    margin-left: 32px;
+}
+
+body.compact .tm-sidebar .tm-sidebar-mode-button-icon {
+    width: 24px;
+    height: 24px;
+    margin-left: -6px;
+    background-size: 24px;
+    transform: rotate(180deg);
+    transition: left 0.1s;
+}
+
+body.compact .tm-sidebar .tm-sidebar-mode-button:hover .tm-sidebar-mode-button-icon {
+    left: 3px;
+}
+
+body.compact .tm-sidebar .tm-sidebar-mode-button p {
+    display: none;
 }
 
 /* Content
