--- a/app/system/modules/finder/app/templates/thumbnail.html
+++ b/app/system/modules/finder/app/templates/thumbnail.html
@@ -1,6 +1,6 @@
 <ul v-if="items.length" class="uk-grid uk-grid-medium uk-grid-match uk-grid-width-small-1-2 uk-grid-width-large-1-3 uk-grid-width-xlarge-1-4" data-uk-grid-margin>
 
-    <li v-for="folder in folders | searched">
+    <li v-for="folder in items | filterBy 'application/folder' in 'mime' | searched">
         <div class="uk-panel uk-panel-box uk-text-center" @click.prevent="toggleSelect(folder.name)">
             <div class="uk-panel-teaser uk-position-relative">
                 <div class="uk-cover-background uk-position-cover pk-thumbnail-folder"></div>
@@ -13,7 +13,7 @@
         </div>
     </li>
 
-    <li v-for="file in files | searched">
+    <li v-for="file in items | filterBy 'application/file' in 'mime' | searched">
         <div class="uk-panel uk-panel-box uk-text-center" @click.prevent="toggleSelect(file.name)">
             <div class="uk-panel-teaser uk-position-relative">
                 <div class="pk-background-contain uk-position-cover" v-if="isImage(file.path)" v-lazy-background="$url(file.url)"></div>
