Add responsive embed support. Mainly for video embedding.
Signed-off-by: Kevin Ryser <kevin.ryser@koweb.ch>

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -567,6 +567,26 @@
 }
 
 
+/* Responsive Embed (Video Plugin)
+ ========================================================================== */
+
+.pk-embed-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	height: 0;
+	overflow: hidden;
+	max-width: 100%;
+}
+
+.pk-embed-container iframe, .pk-embed-container object, .pk-embed-container embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+
 /* Form Link (Link Picker)
  ========================================================================== */
 
