Added changelog to update view

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -124,6 +124,14 @@
     border-left: 1px solid @global-border;
 }
 
+/* Modifier: Badge
+========================================================================== */
+
+.pk-badge-justify {
+    box-sizing: border-box;
+    width: 100px;
+}
+
 
 /* SVG Icons
  ========================================================================== */
