add location Background (WIP)

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -526,7 +526,7 @@
 .pk-panel-background {
     margin: -@panel-box-padding;
     padding: @panel-box-padding;
-    background: @global-primary-background url("../images/dashboard-location.jpg") 0 0 no-repeat;
+    background: @global-primary-background 0 0 no-repeat;
     background-size: cover;
 }
 
