Nicer update notification on dashboard

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -173,6 +173,7 @@
 .pk-icon-move { background-image: url("../images/icon-move.svg"); }
 .pk-icon-pen { background-image: url("../images/icon-pen.svg"); }
 .pk-icon-link { background-image: url("../images/icon-link.svg"); }
+.pk-icon-bell { background-image: url("../images/icon-bell.svg"); }
 
 .pk-icon-folder-circle,
 .pk-icon-file-circle {
@@ -204,6 +205,13 @@
 .pk-icon-circle-success { background: @global-success-background; }
 .pk-icon-circle-danger { background: @global-danger-background; }
 .pk-icon-circle-warning { background: @global-warning-background; }
+
+.pk-icon-bell {
+    width: 35px;
+    height: 35px;
+    border-radius: 50px;
+    background-color: @global-danger-background;
+}
 
 /*
  * Icon Hover
