added icon for meta settings

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -260,6 +260,9 @@
 .pk-icon-large-comment { background-image: url("../images/icon-large-comment.svg"); }
 .pk-icon-large-brush { background-image: url("../images/icon-large-brush.svg"); }
 .pk-icon-large-cone { background-image: url("../images/icon-large-cone.svg"); }
+.pk-icon-large-meta { background-image: url("../images/icon-large-meta.svg"); }
+
+
 
 /*
  * Link Hover with Icon and Text (Link Picker + Blog)
