dashboard - add drag handle

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -156,6 +156,7 @@
 .pk-icon-block { background-image: url("../images/icon-block.svg"); }
 .pk-icon-check { background-image: url("../images/icon-check.svg"); }
 .pk-icon-copy { background-image: url("../images/icon-copy.svg"); }
+.pk-icon-drag { background-image: url("../images/icon-copy.svg"); }
 .pk-icon-warning { background-image: url("../images/icon-warning.svg"); }
 .pk-icon-edit { background-image: url("../images/icon-edit.svg"); }
 .pk-icon-comment { background-image: url("../images/icon-comment.svg"); }
