--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -156,7 +156,6 @@
 .pk-icon-block { background-image: url("../images/icon-block.svg"); }
 .pk-icon-check { background-image: url("../images/icon-check.svg"); }
 .pk-icon-copy { background-image: url("../images/icon-copy.svg"); }
-.pk-icon-drag { background-image: url("../images/icon-copy.svg"); }
 .pk-icon-warning { background-image: url("../images/icon-warning.svg"); }
 .pk-icon-edit { background-image: url("../images/icon-edit.svg"); }
 .pk-icon-comment { background-image: url("../images/icon-comment.svg"); }
@@ -180,6 +179,7 @@
 .pk-icon-pen { background-image: url("../images/icon-pen.svg"); }
 .pk-icon-link { background-image: url("../images/icon-link.svg"); }
 .pk-icon-bell { background-image: url("../images/icon-bell.svg"); }
+.pk-icon-drag { background-image: url("../images/icon-drag.svg"); }
 
 .pk-icon-folder-circle,
 .pk-icon-file-circle {
