rename pk-icon-drag to pk-icon-handle and added pk-icon-handle-contrast

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -179,7 +179,7 @@
 .pk-icon-pen { background-image: url("../images/icon-pen.svg"); }
 .pk-icon-link { background-image: url("../images/icon-link.svg"); }
 .pk-icon-bell { background-image: url("../images/icon-bell.svg"); }
-.pk-icon-drag { background-image: url("../images/icon-drag.svg"); }
+.pk-icon-handle { background-image: url("../images/icon-handle.svg"); }
 
 .pk-icon-folder-circle,
 .pk-icon-file-circle {
@@ -245,6 +245,7 @@
  */
 
 .pk-icon-contrast.pk-icon-edit { background-image: url("../images/icon-edit-contrast.svg"); }
+.pk-icon-contrast.pk-icon-handle { background-image: url("../images/icon-handle-contrast.svg"); }
 
 /*
  * Icon Large
