updated dashboard sortable CSS

--- a/app/system/assets/less/pagekit.less
+++ b/app/system/assets/less/pagekit.less
@@ -119,6 +119,12 @@
 
 .pk-sortable-dragged-panel > * { box-shadow: 0 5px 20px rgba(0,0,0,0.2); }
 
+.pk-sortable-dragged-panel .uk-hidden,
+.pk-sortable-dragged-panel .uk-invisible {
+    display: inline-block !important;
+    visibility: visible !important;
+}
+
 
 /* Modifier: Search
 ========================================================================== */
